0.3.1
 * Fixed crash when clicking "Create new contact" button
 * Fixed occasional crashes when Bote connects to / disconnects from the network
 * Added "Copy to clipboard" button to identities and contacts
 * Added labels to the address book actions menu
 * Updated translations

0.3 / 2014-12-01 / ebba8aac78d50eda9d25f936e8bd348553966649
 * Migrated to new Material design from Android Lollipop
 * Overhauled password usability
 * Identicons for contacts without pictures
 * Check email improvements
   * Use new-style swipe
   * Users can now launch check from menu, or swipe on empty inbox
 * "Forward" and "Reply all" actions for emails
 * QR codes for sharing identities
 * Separated viewing and editing contacts
 * Improved network information page
 * Various bug fixes
 * Updated translations

0.3-rc3 / 2014-08-23 / 6e7655836552d13d6fa6b7512e7dcf77cb3d413b
 * Test release to Norway on Google Play

0.2 / 2014-07-10 / 6c9c580bf6272db575091a1b48f66315535380e0

0.1.1 / 2014-06-20 / a9c83d573dc3c5fbeeb288b347f996f440b33621
 * Fixed bugs in identity creation and password setting

0.1 / 2014-06-19 / 8457f58f367a2f362bdacd470c792b4bcd6d42f6
 * Initial release