@@ -43,6 +43,7 @@
     <string name="action_stop_bote">Disconnect from network</string>
     <string name="action_settings">Settings</string>
     <string name="check_email">Check email</string>
+    <string name="checking_email">Checking email&#8230;</string>
     <!-- Argument is a number -->
     <plurals name="incomplete_emails">
         <item quantity="one">One incomplete email</item>
